# python3-homegear

./: .gitignore  CMakeLists.txt  Example.py  IpcClient.cpp  IpcClient.h  LICENSE  MANIFEST.in  PythonVariableConverter.cpp  PythonVariableConverter.h  README.md  build.sh  createDebianPackage.sh  getVersion.sh  homegear.cpp  setup.py
debian/: control  copyright  rules
